ES|QL: Add TBUCKET function
Fix tests

Closes #131068